Refatorando estrutura
